# nyc-taxi

./: Makefile  README.md  pyproject.toml  requirements.dev.txt
docs/: mkdocs.yml
docs/docs/: index.md
nyc_taxi_mlops_project/: __init__.py  dataset.py  features.py  plots.py
nyc_taxi_mlops_project/modeling/: predict.py  train.py
