[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nyc_taxi_mlops_project"
version = "0.0.1"
description = "ML project to predict trip duration in NYC city followed modular approach with best Mlps practices"
authors = [
  { name = "Vijay" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["nyc_taxi_mlops_project"]
force_sort_within_sections = true
